CB-11004 Accept minion fingerprints on all master
After https://github.com/hortonworks/cloudbreak/pull/8408/commits/451ff5441bf2924d501af6efc7a6db168accd3f0
every minion fingerprint has to be accepted on the master for SaltStack to be functional.
This was done only for the primary gateway which caused error in multi-master setup like FreeIPA HA.

The solution is we create `SaltConnector` to all the gateways during bootstrap and iterate over them in `MinionAcceptor`

Tested with FreeIPA HA, with validating salt keys:
```
(salt_3000.5) [root@ipaserver0 ~]# salt-key -L
Accepted Keys:
ipaserver0.test.xcu2-8y8x.wl.cloudera.site
ipaserver1.test.xcu2-8y8x.wl.cloudera.site
ipaserver2.test.xcu2-8y8x.wl.cloudera.site
(salt_3000.5) [root@ipaserver1 ~]# salt-key -L
Accepted Keys:
ipaserver0.test.xcu2-8y8x.wl.cloudera.site
ipaserver1.test.xcu2-8y8x.wl.cloudera.site
ipaserver2.test.xcu2-8y8x.wl.cloudera.site
(salt_3000.5) [root@ipaserver2 ~]# salt-key -L
Accepted Keys:
ipaserver0.test.xcu2-8y8x.wl.cloudera.site
ipaserver1.test.xcu2-8y8x.wl.cloudera.site
ipaserver2.test.xcu2-8y8x.wl.cloudera.site
```