@@ -86,9 +86,10 @@ public class SaltBootstrapTest {
         targets.add(new Node("10.0.0.2", null, null, "hg"));
         targets.add(new Node("10.0.0.3", null, null, "hg"));
 
-        SaltBootstrap saltBootstrap = new SaltBootstrap(saltConnector, Collections.singletonList(gatewayConfig), targets, new BootstrapParams());
+        SaltBootstrap saltBootstrap = new SaltBootstrap(saltConnector, List.of(saltConnector), Collections.singletonList(gatewayConfig), targets,
+                new BootstrapParams());
         saltBootstrap = spy(saltBootstrap);
-        doReturn(mock(MinionAcceptor.class)).when(saltBootstrap).createMinionAcceptor(any(SaltAction.class));
+        doReturn(mock(MinionAcceptor.class)).when(saltBootstrap).createMinionAcceptor();
 
         saltBootstrap.call();
     }
@@ -108,9 +109,10 @@ public class SaltBootstrapTest {
         String missingNodeIp = "10.0.0.3";
         targets.add(new Node(missingNodeIp, null, null, "hg"));
 
-        SaltBootstrap saltBootstrap = new SaltBootstrap(saltConnector, Collections.singletonList(gatewayConfig), targets, new BootstrapParams());
+        SaltBootstrap saltBootstrap = new SaltBootstrap(saltConnector, List.of(saltConnector), Collections.singletonList(gatewayConfig), targets,
+                new BootstrapParams());
         saltBootstrap = spy(saltBootstrap);
-        doReturn(mock(MinionAcceptor.class)).when(saltBootstrap).createMinionAcceptor(any(SaltAction.class));
+        doReturn(mock(MinionAcceptor.class)).when(saltBootstrap).createMinionAcceptor();
         try {
             saltBootstrap.call();
             fail("should throw exception");
@@ -140,9 +142,9 @@ public class SaltBootstrapTest {
         BootstrapParams params = new BootstrapParams();
         params.setRestartNeeded(true);
         params.setRestartNeededFlagSupported(false);
-        SaltBootstrap saltBootstrap = new SaltBootstrap(saltConnector, Collections.singletonList(gatewayConfig), targets, params);
+        SaltBootstrap saltBootstrap = new SaltBootstrap(saltConnector, List.of(saltConnector), Collections.singletonList(gatewayConfig), targets, params);
         saltBootstrap = spy(saltBootstrap);
-        doReturn(mock(MinionAcceptor.class)).when(saltBootstrap).createMinionAcceptor(any(SaltAction.class));
+        doReturn(mock(MinionAcceptor.class)).when(saltBootstrap).createMinionAcceptor();
 
         saltBootstrap.call();
 
@@ -177,9 +179,9 @@ public class SaltBootstrapTest {
         BootstrapParams params = new BootstrapParams();
         params.setRestartNeeded(true);
         params.setRestartNeededFlagSupported(true);
-        SaltBootstrap saltBootstrap = new SaltBootstrap(saltConnector, Collections.singletonList(gatewayConfig), targets, params);
+        SaltBootstrap saltBootstrap = new SaltBootstrap(saltConnector, List.of(saltConnector), Collections.singletonList(gatewayConfig), targets, params);
         saltBootstrap = spy(saltBootstrap);
-        doReturn(mock(MinionAcceptor.class)).when(saltBootstrap).createMinionAcceptor(any(SaltAction.class));
+        doReturn(mock(MinionAcceptor.class)).when(saltBootstrap).createMinionAcceptor();
 
         saltBootstrap.call();
 
@@ -214,9 +216,9 @@ public class SaltBootstrapTest {
         BootstrapParams params = new BootstrapParams();
         params.setRestartNeeded(false);
         params.setRestartNeededFlagSupported(true);
-        SaltBootstrap saltBootstrap = new SaltBootstrap(saltConnector, Collections.singletonList(gatewayConfig), targets, params);
+        SaltBootstrap saltBootstrap = new SaltBootstrap(saltConnector, List.of(saltConnector), Collections.singletonList(gatewayConfig), targets, params);
         saltBootstrap = spy(saltBootstrap);
-        doReturn(mock(MinionAcceptor.class)).when(saltBootstrap).createMinionAcceptor(any(SaltAction.class));
+        doReturn(mock(MinionAcceptor.class)).when(saltBootstrap).createMinionAcceptor();
 
         saltBootstrap.call();
 
@@ -251,9 +253,9 @@ public class SaltBootstrapTest {
         BootstrapParams params = new BootstrapParams();
         params.setRestartNeeded(false);
         params.setRestartNeededFlagSupported(false);
-        SaltBootstrap saltBootstrap = new SaltBootstrap(saltConnector, Collections.singletonList(gatewayConfig), targets, params);
+        SaltBootstrap saltBootstrap = new SaltBootstrap(saltConnector, List.of(saltConnector), Collections.singletonList(gatewayConfig), targets, params);
         saltBootstrap = spy(saltBootstrap);
-        doReturn(mock(MinionAcceptor.class)).when(saltBootstrap).createMinionAcceptor(any(SaltAction.class));
+        doReturn(mock(MinionAcceptor.class)).when(saltBootstrap).createMinionAcceptor();
 
         saltBootstrap.call();
 
